Fix spacing issue with meta

--- a/web/assets/scss/_layout.scss
+++ b/web/assets/scss/_layout.scss
@@ -566,6 +566,10 @@ overflow: hidden;
 padding-left: 0.5rem !important;
 }
 
+.padding-right {
+padding-right: 0.5rem !important;
+}
+
 .padding {
 /*
   @include breakpoint(small) {
